Spin hjulet og quiz tilføjet på forside (+små rettelser i img navn)

--- a/favoritside.html
+++ b/favoritside.html
@@ -11,7 +11,7 @@
     <header>
       <a href="index.html">
         <img
-          src="Images/Logo spilcafeen.png"
+          src="images/logo-spilcafeen.png"
           alt="Games App Logo"
           class="logo"
         />
@@ -37,7 +37,7 @@
           aria-label="Åbn filtre"
         >
           <img
-            src="Images/Filtrerings ikon.png"
+            src="images/filtrerings-ikon.png"
             alt="Filter"
             class="filter-icon"
           />
@@ -200,22 +200,22 @@
     <nav class="bottom-nav">
       <a href="index.html" class="bottom-nav-item">
         <div class="bottom-nav-icon">
-          <img src="Images/hus-farvet.svg" alt="Hjem" />
+          <img src="images/hus-farvet.svg" alt="Hjem" />
         </div>
       </a>
       <a href="profilside.html" class="bottom-nav-item">
         <div class="bottom-nav-icon">
-          <img src="Images/bruger-farvet.svg" alt="Bruger" />
+          <img src="images/bruger-farvet.svg" alt="Bruger" />
         </div>
       </a>
       <a href="favoritside.html" class="bottom-nav-item bottom-nav-active">
         <div class="bottom-nav-icon">
-          <img src="Images/hjerte.svg" alt="Favoritter" />
+          <img src="images/hjerte.svg" alt="Favoritter" />
         </div>
       </a>
       <a href="burgermenu.html" class="bottom-nav-item">
         <div class="bottom-nav-icon">
-          <img src="Images/burgermenu-farvet.svg" alt="Burgermenu" />
+          <img src="images/burgermenu-farvet.svg" alt="Burgermenu" />
         </div>
       </a>
     </nav>
