--- a/profilside.html
+++ b/profilside.html
@@ -10,7 +10,7 @@
     <!-- Header -->
     <header>
       <a href="index.html">
-        <img src="Images/Logo spilcafeen.png" alt="Games App Logo" class="logo" />
+        <img src="images/logo-spilcafeen.png" alt="Games App Logo" class="logo" />
       </a>
 
       <div class="header-location">
@@ -32,7 +32,7 @@
           class="filter-toggle"
           aria-label="Åbn filtre"
         >
-          <img src="Images/Filtrerings ikon.png" alt="Filter" class="filter-icon" />
+          <img src="images/filtrerings-ikon.png" alt="Filter" class="filter-icon" />
           <span id="filter-badge" class="filter-badge" style="display: none"
             >0</span
           >
@@ -148,22 +148,22 @@
     <nav class="bottom-nav">
       <a href="index.html" class="bottom-nav-item">
         <div class="bottom-nav-icon">
-          <img src="Images/hus-farvet.svg" alt="Hjem" />
+          <img src="images/hus-farvet.svg" alt="Hjem" />
         </div>
       </a>
       <a href="profilside.html" class="bottom-nav-item bottom-nav-active">
         <div class="bottom-nav-icon">
-          <img src="Images/bruger.svg" alt="Bruger" />
+          <img src="images/bruger.svg" alt="Bruger" />
         </div>
       </a>
       <a href="favoritside.html" class="bottom-nav-item">
         <div class="bottom-nav-icon">
-          <img src="Images/hjerte-farvet.svg" alt="Favoritter" />
+          <img src="images/hjerte-farvet.svg" alt="Favoritter" />
         </div>
       </a>
       <a href="burgermenu.html" class="bottom-nav-item">
         <div class="bottom-nav-icon">
-          <img src="Images/burgermenu-farvet.svg" alt="Burgermenu" />
+          <img src="images/burgermenu-farvet.svg" alt="Burgermenu" />
         </div>
       </a>
     </nav>
