Spin hjul og quiz kan åbnes

--- a/index.html
+++ b/index.html
@@ -186,17 +186,21 @@
       <!-- Spin hjulet og quiz -->
       <section>
         <h1>Kan du ikke vælge?</h1>
+        <div class="spin-quiz-wrapper">
         <div class="spin-container">
-          <div class="spin-container-text">
-          <h2>Spin hjulet</h2>
-          <p>Kan du ikke vælge hvilket spil I vil spille? Spin jer frem til næste spil!!</p>
+          <div class="spin-inner-wrapper">
+            <div class="spin-container-text">
+              <h2>Spin hjulet</h2>
+              <p>Kan du ikke vælge hvilket spil I vil spille? Spin jer frem til næste spil!!</p>
+            </div>
+            <div class="spin-poster">
+              <img src="images/spin-hjul-billede.png" class="spin-poster" />
+            </div>
+          </div>
         </div>
-        <div class="spin-poster">
-          <img src="images/spin-hjul-billede.png" class="spin-poster" />
-          </div>
-          </div>
 
           <div class="quiz-container">
+            <div class="quiz-inner-wrapper">
             <div class="quiz-container-text">
           <h2>Quiz dit spilvalg</h2>
           <p>Svar på få spørgsmål - så finder vi det perfekte spil til jer!!</p>
@@ -205,6 +209,7 @@
           <img src="images/quiz-billede.png" class="quiz-poster" />
           </div>
         </div>
+      </div>
       </section>
 
        <!-- Spil hjul dialog -->
@@ -226,6 +231,7 @@
         </div>
       </form>
     </dialog>
+
 
       <!-- Alle spil -->
       <section>
