Spin hjul og quiz content

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div class="header-search">
           <!-- Klikbart søge-ikon som viser søgefeltet ved klik -->
           <button id="search-toggle" class="search-toggle" aria-label="Åbn søgning">
-            <img src="images/søge-ikon.png" alt="Søg" class="search-icon" />
+            <img src="images/soege-ikon.png" alt="Søg" class="search-icon" />
           </button>
 
           <!-- Gemt søgefelt: vises når brugeren klikker på ikonet -->
