--- a/index.html
+++ b/index.html
@@ -185,37 +185,38 @@
 
       <!-- Spin hjulet og quiz -->
       <section>
-        <h1>Kan du ikke vælge?</h1>
-        <div class="spin-quiz-wrapper">
-        <div class="spin-container">
-          <div class="spin-inner-wrapper">
-            <div class="spin-container-text">
-              <h2>Spin hjulet</h2>
-              <p>Kan du ikke vælge hvilket spil I vil spille? Spin jer frem til næste spil!!</p>
-            </div>
-            <div class="spin-poster">
-              <img src="images/spin-hjul-billede.png" class="spin-poster" />
+          <h1>Kan du ikke vælge?</h1>
+          <div class="spin-quiz-wrapper"> 
+          <div class="spin-container">
+            <div class="spin-inner-wrapper">
+              <div class="spin-container-text">
+                <h2>Spin hjulet</h2>
+                <p>Kan du ikke vælge hvilket spil I vil spille? Spin jer frem til næste spil!!</p>
+              </div>
+              <div class="spin-poster">
+                <img src="images/spin-hjul-billede.png" alt="Spin Hjul" class="spin-poster" />
+              </div>
             </div>
           </div>
-        </div>
 
-          <div class="quiz-container">
-            <div class="quiz-inner-wrapper">
-            <div class="quiz-container-text">
-          <h2>Quiz dit spilvalg</h2>
-          <p>Svar på få spørgsmål - så finder vi det perfekte spil til jer!!</p>
-        </div>
-        <div class="quiz-poster">
-          <img src="images/quiz-billede.png" class="quiz-poster" />
+            <div class="quiz-container">
+              <div class="quiz-inner-wrapper">
+              <div class="quiz-container-text">
+            <h2>Quiz dit spilvalg</h2>
+            <p>Svar på få spørgsmål - så finder vi det perfekte spil til jer!!</p>
+          </div>
+          <div class="quiz-poster">
+            <img src="images/quiz-billede.png" alt="Quiz" class="quiz-poster" />
+            </div>
           </div>
         </div>
-      </div>
+        </div>
       </section>
 
        <!-- Spil hjul dialog -->
     <dialog id="spin-dialog">
       <form method="dialog">
-        <button id="close-dialog" aria-label="Close">✕</button>
+        <button id="close-spin-dialog" aria-label="Close">✕</button>
         <div id="spin-dialog-content">
           <!-- Spin details will be injected here via JavaScript -->
         </div>
@@ -225,7 +226,7 @@
      <!-- Quiz dialog -->
     <dialog id="quiz-dialog">
       <form method="dialog">
-        <button id="close-dialog" aria-label="Close">✕</button>
+        <button id="close-quiz-dialog" aria-label="Close">✕</button>
         <div id="quiz-dialog-content">
           <!-- Quiz details will be injected here via JavaScript -->
         </div>
