--- a/burgermenu.html
+++ b/burgermenu.html
@@ -5,76 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Menu - Games App</title>
     <link rel="stylesheet" href="css/app.css" />
+    <!-- CSS-klasser for .under-development og .under-dev-button skal defineres i app.css -->
   </head>
   <body>
-    <!-- Header -->
+    <!-- Header (top bar med logo) -->
     <header>
       <a href="index.html">
-        <img
-          src="images/logo-spilcafeen.png"
-          alt="Games App Logo"
-          class="logo"
-        />
+        <img src="images/logo-spilcafeen.png" alt="Games App Logo" class="logo" />
       </a>
-
-      <div class="header-location">
-        <select id="location-select" class="location-dropdown">
-          <option value="all">Alle lokationer</option>
-        </select>
-      </div>
-
-      <div class="header-controls">
-        <div class="header-search">
-          <input
-            type="text"
-            id="header-search-input"
-            placeholder="Søg spil..."
-          />
-        </div>
-        <button
-          id="filter-toggle"
-          class="filter-toggle"
-          aria-label="Åbn filtre"
-        >
-          <img
-            src="images/filtrerings-ikon.png"
-            alt="Filter"
-            class="filter-icon"
-          />
-          <span id="filter-badge" class="filter-badge" style="display: none"
-            >0</span
-          >
-        </button>
-      </div>
     </header>
 
     <!-- Main content -->
     <main>
       <!-- "Side mangler" indhold -->
-      <div class="no-favorites">
+      <div class="under-development">
         <h3>Siden er under udvikling</h3>
         <p>
           Menu-funktionen er endnu ikke implementeret.<br />
           Vi arbejder på at gøre den klar til dig!
         </p>
-        <a
-          href="index.html"
-          style="
-            display: inline-block;
-            background: var(--primary);
-            color: white;
-            padding: 0.75rem 2rem;
-            border-radius: var(--radius);
-            text-decoration: none;
-            font-weight: 500;
-            transition: var(--transition);
-            margin-top: 1rem;
-          "
-          onmouseover="this.style.background='var(--secondary)'; this.style.transform='translateY(-2px)'"
-          onmouseout="this.style.background='var(--primary)'; this.style.transform='translateY(0)'"
-        >
-          ← Tilbage til spil
-        </a>
+        <a href="index.html" class="under-dev-button">← Tilbage til spil</a>
       </div>
     </main>
 
