--- a/favoritside.html
+++ b/favoritside.html
@@ -7,177 +7,27 @@
     <link rel="stylesheet" href="css/app.css" />
   </head>
   <body>
-    <!-- Header -->
+    <!-- Header (top bar med logo) -->
     <header>
       <a href="index.html">
-        <img
-          src="images/logo-spilcafeen.png"
-          alt="Games App Logo"
-          class="logo"
-        />
+        <img src="images/logo-spilcafeen.png" alt="Games App Logo" class="logo" />
       </a>
-
-      <div class="header-location">
-        <select id="location-select" class="location-dropdown">
-          <option value="all">Alle lokationer</option>
-        </select>
-      </div>
-
-      <div class="header-controls">
-        <div class="header-search">
-          <input
-            type="text"
-            id="header-search-input"
-            placeholder="Søg spil..."
-          />
-        </div>
-        <button
-          id="filter-toggle"
-          class="filter-toggle"
-          aria-label="Åbn filtre"
-        >
-          <img
-            src="images/filtrerings-ikon.png"
-            alt="Filter"
-            class="filter-icon"
-          />
-          <span id="filter-badge" class="filter-badge" style="display: none"
-            >0</span
-          >
-        </button>
-      </div>
-
-      <!-- Filter dropdown panel -->
-      <div class="filter-panel" id="filter-panel">
-        <div class="filter-panel-content">
-          <h3>Filtrer spil</h3>
-
-          <div class="filter-row">
-            <label for="header-sort-select">Sorter efter</label>
-            <select id="header-sort-select">
-              <option value="all">Ingen sortering</option>
-              <option value="title">Titel (A-Å)</option>
-              <option value="title2">Titel (Å-A)</option>
-              <option value="rating">Mest populære</option>
-            </select>
-          </div>
-
-          <div class="filter-row">
-            <label for="header-genre-select">Kategori</label>
-            <select id="header-genre-select">
-              <option value="none">Alle kategorier</option>
-            </select>
-          </div>
-
-          <div class="filter-row">
-            <label>Antal spillere</label>
-            <div class="range-inputs">
-              <input
-                type="number"
-                id="header-players-from"
-                placeholder="Fra"
-                min="1"
-                max="8"
-                step="1"
-              />
-            </div>
-          </div>
-
-          <div class="filter-row">
-            <label>Spilletid (min):</label>
-            <div class="range-inputs">
-              <input
-                type="number"
-                id="header-playtime-from"
-                placeholder="Fra"
-                min="0"
-                max="300"
-                step="15"
-              />
-              <span>til</span>
-              <input
-                type="number"
-                id="header-playtime-to"
-                placeholder="Til"
-                min="0"
-                max="300"
-                step="15"
-              />
-            </div>
-          </div>
-
-          <div class="filter-row">
-            <label for="header-difficulty-select">Sværhedsgrad</label>
-            <select id="header-difficulty-select">
-              <option value="none">Alle sværhedsgrader</option>
-              <option value="Let">Let</option>
-              <option value="Mellem">Mellem</option>
-              <option value="Svær">Svær</option>
-            </select>
-          </div>
-
-          <div class="filter-row">
-            <label>Min. Alder</label>
-            <div class="range-inputs">
-              <input
-                type="number"
-                id="header-age-from"
-                placeholder="Fra"
-                min="0"
-                max="100"
-                step="1"
-              />
-            </div>
-          </div>
-
-          <div class="filter-row">
-            <label>Rating:</label>
-            <div class="range-inputs">
-              <input
-                type="number"
-                id="header-rating-from"
-                placeholder="Fra"
-                min="0"
-                max="5"
-                step="1"
-              />
-              <span>til</span>
-              <input
-                type="number"
-                id="header-rating-to"
-                placeholder="Til"
-                min="0"
-                max="5"
-                step="1"
-              />
-            </div>
-          </div>
-
-          <div class="filter-actions">
-            <button id="header-clear-filters" class="clear-btn">
-              Ryd alle filtre
-            </button>
-            <button id="filter-close" class="close-btn">Vis resultater</button>
-          </div>
-        </div>
-      </div>
     </header>
 
     <!-- Main content -->
     <main>
-      <!-- Page header -->
+      <!-- Favoritsidens header -->
       <section>
         <div class="games-header">
           <h1 id="favorites-count">Mine Favoritter (0 spil)</h1>
         </div>
       </section>
 
-      <!-- No favorites message (hidden initially) -->
+      <!-- Ingen favoritter besked -->
       <div class="no-favorites" id="no-favorites" style="display: none">
         <h3>Du har ingen favoritter endnu</h3>
         <p>
-          Klik på ❤️ ikonerne på spillene for at tilføje dem til dine
-          favoritter!
+          Klik på ❤️ ikonerne på spillene for at tilføje dem til dine favoritter!
         </p>
         <a href="index.html" class="bottom-nav-item">Se alle spil</a>
       </div>
@@ -185,16 +35,6 @@
       <!-- Game list -->
       <section id="game-list" class="game-grid"></section>
     </main>
-
-    <!-- Game Modal -->
-    <dialog id="game-dialog">
-      <form method="dialog">
-        <button id="close-dialog" aria-label="Close">✕</button>
-        <div id="dialog-content">
-          <!-- Game details will be injected here via JavaScript -->
-        </div>
-      </form>
-    </dialog>
 
     <!-- Bottom Navigation Bar -->
     <nav class="bottom-nav">
