profilside valideret (html)

--- a/profilside.html
+++ b/profilside.html
@@ -30,6 +30,7 @@
             <p>Her kan du se dine bruger-indstillinger.<br />Denne funktion er under udvikling.</p>
             <a href="index.html" class="bottom-nav-item">Se alle spil</a>
         </div>
+    </main>
 
     <!-- Bottom Navigation Bar -->
     <nav class="bottom-nav">
@@ -54,6 +55,5 @@
         </div>
       </a>
     </nav>
-
 </body>
 </html>
