--- a/profilside.html
+++ b/profilside.html
@@ -36,22 +36,22 @@
     <nav class="bottom-nav">
       <a href="index.html" class="bottom-nav-item">
         <div class="bottom-nav-icon">
-          <img src="images/hus-farvet.svg" alt="Hjem" />
+          <img src="../images/hus-farvet.svg" alt="Hjem" />
         </div>
       </a>
       <a href="profilside.html" class="bottom-nav-item bottom-nav-active">
         <div class="bottom-nav-icon">
-          <img src="images/bruger.svg" alt="Bruger" />
+          <img src="../images/bruger.svg" alt="Bruger" />
         </div>
       </a>
       <a href="favoritside.html" class="bottom-nav-item">
         <div class="bottom-nav-icon">
-          <img src="images/hjerte-farvet.svg" alt="Favoritter" />
+          <img src="../images/hjerte-farvet.svg" alt="Favoritter" />
         </div>
       </a>
       <a href="burgermenu.html" class="bottom-nav-item">
         <div class="bottom-nav-icon">
-          <img src="images/burgermenu-farvet.svg" alt="Burgermenu" />
+          <img src="../images/burgermenu-farvet.svg" alt="Burgermenu" />
         </div>
       </a>
     </nav>
