fejlrettelser med ikoner som ikke vil vises på publiceret hjemmeside

--- a/favoritside.html
+++ b/favoritside.html
@@ -36,29 +36,29 @@
       <section id="game-list" class="game-grid"></section>
     </main>
 
-    <!-- Bottom Navigation Bar -->
-    <nav class="bottom-nav">
-      <a href="index.html" class="bottom-nav-item">
-        <div class="bottom-nav-icon">
-          <img src="images/hus-farvet.svg" alt="Hjem" />
-        </div>
-      </a>
-      <a href="profilside.html" class="bottom-nav-item">
-        <div class="bottom-nav-icon">
-          <img src="images/bruger-farvet.svg" alt="Bruger" />
-        </div>
-      </a>
-      <a href="favoritside.html" class="bottom-nav-item bottom-nav-active">
-        <div class="bottom-nav-icon">
-          <img src="images/hjerte.svg" alt="Favoritter" />
-        </div>
-      </a>
-      <a href="burgermenu.html" class="bottom-nav-item">
-        <div class="bottom-nav-icon">
-          <img src="images/burgermenu-farvet.svg" alt="Burgermenu" />
-        </div>
-      </a>
-    </nav>
+<!-- Bottom Navigation Bar -->
+<nav class="bottom-nav">
+  <a href="index.html" class="bottom-nav-item">
+    <div class="bottom-nav-icon">
+      <img src="images/hus-farvet.svg" alt="Hjem" />
+    </div>
+  </a>
+  <a href="profilside.html" class="bottom-nav-item">
+    <div class="bottom-nav-icon">
+      <img src="images/bruger-farvet.svg" alt="Bruger" />
+    </div>
+  </a>
+  <a href="favoritside.html" class="bottom-nav-item bottom-nav-active">
+    <div class="bottom-nav-icon">
+      <img src="images/hjerte-farvet.svg" alt="Favoritter" />
+    </div>
+  </a>
+  <a href="burgermenu.html" class="bottom-nav-item">
+    <div class="bottom-nav-icon">
+      <img src="images/burgermenu-farvet.svg" alt="Burgermenu" />
+    </div>
+  </a>
+</nav>
 
     <script src="js/favoritside.js"></script>
   </body>
