--- a/index.html
+++ b/index.html
@@ -291,29 +291,29 @@
       </form>
     </dialog>
 
-    <!-- Bottom Navigation Bar -->
-    <nav class="bottom-nav">
-      <a href="index.html" class="bottom-nav-item bottom-nav-active">
-        <div class="bottom-nav-icon">
-          <img src="images/hus.svg" alt="Hjem" />
-        </div>
-      </a>
-      <a href="profilside.html" class="bottom-nav-item">
-        <div class="bottom-nav-icon">
-          <img src="images/bruger-farvet.svg" alt="Bruger" />
-        </div>
-      </a>
-      <a href="favoritside.html" class="bottom-nav-item">
-        <div class="bottom-nav-icon">
-          <img src="images/hjerte-farvet.svg" alt="Favoritter" />
-        </div>
-      </a>
-      <a href="burgermenu.html" class="bottom-nav-item">
-        <div class="bottom-nav-icon">
-          <img src="images/burgermenu-farvet.svg" alt="Burgermenu" />
-        </div>
-      </a>
-    </nav>
+<!-- Bottom Navigation Bar -->
+<nav class="bottom-nav">
+  <a href="index.html" class="bottom-nav-item bottom-nav-active">
+    <div class="bottom-nav-icon">
+      <img src="images/hus-farvet.svg" alt="Hjem" />
+    </div>
+  </a>
+  <a href="profilside.html" class="bottom-nav-item">
+    <div class="bottom-nav-icon">
+      <img src="images/bruger-farvet.svg" alt="Bruger" />
+    </div>
+  </a>
+  <a href="favoritside.html" class="bottom-nav-item">
+    <div class="bottom-nav-icon">
+      <img src="images/hjerte-farvet.svg" alt="Favoritter" />
+    </div>
+  </a>
+  <a href="burgermenu.html" class="bottom-nav-item">
+    <div class="bottom-nav-icon">
+      <img src="images/burgermenu-farvet.svg" alt="Burgermenu" />
+    </div>
+  </a>
+</nav>
 
     <script src="js/app.js"></script>
 
