--- a/favoritside.html
+++ b/favoritside.html
@@ -50,7 +50,7 @@
   </a>
   <a href="favoritside.html" class="bottom-nav-item bottom-nav-active">
     <div class="bottom-nav-icon">
-      <img src="Images/hjerte-farvet.svg" alt="Favoritter" />
+      <img src="Images/hjerte.svg" alt="Favoritter" />
     </div>
   </a>
   <a href="burgermenu.html" class="bottom-nav-item">
