--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
 <nav class="bottom-nav">
   <a href="index.html" class="bottom-nav-item bottom-nav-active">
     <div class="bottom-nav-icon">
-      <img src="Images/hus-farvet.svg" alt="Hjem" />
+      <img src="Images/Hus.svg" alt="Hjem" />
     </div>
   </a>
   <a href="profilside.html" class="bottom-nav-item">
